fix: editor not wrapping when viewport is small

--- a/src/components/editor/editor.scss
+++ b/src/components/editor/editor.scss
@@ -8,3 +8,7 @@
 .cm-gutters {
 	display: inline;
 }
+
+.ͼ1.cm-focused {
+	outline: none;
+}
